# jit-mcp

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
examples/: agent_integration.py
src/jit_mcp/: __init__.py  context_manager.py  llm_provider.py  mcp_client.py  orchestrator.py  registry.py  search.py  tool_provider.py
tests/: test_flow.py  test_registry.py  test_tool_provider.py
